# cppHello

./: .gitignore  CMakeLists.txt  Dockerfile  Hello.cpp  HelloConfig.h.in
GildedRose/: CMakeLists.txt  GildedRose.cpp  GildedRose.h  GildedRoseTextTests.cpp  GildedRoseUnitTests.cpp
Greetings/: CMakeLists.txt  CmakeLists.txt  Greetings.cpp  Greetings.h  GreetingsTest.cpp
Hello/: Hello.cpp
